# stalber

./: README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
stalber/: agent.py  config.py  main.py  manager.py  service.py
stalber/cmd/: stalber_agent.py
stalber/notifications/: mail.py
