[metadata]
name = stalber
summary = wenran dev
description-file =
    README.rst
author = wenranxiao
author-email = wenranxiao@gmail.com
home-page =
classifier =

[files]

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    stalber = stalber.agent:main

[build_sphinx]

[upload_sphinx]

[compile_catalog]

[update_catalog]

[extract_messages]
